add simple homepgae

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://kit.fontawesome.com/fdce58e6f7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./styles.css"/>
     
-    <title>Instituto de energias renovables</title>
+    <title>Instituto de Energias Renovables</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
