--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://kit.fontawesome.com/fdce58e6f7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles.css"/>
+    <link rel="stylesheet" href="/styles.css"/>
     
     <title>Instituto de Energias Renovables</title>
   </head>
